feat: ability to export unreferenced comments
Refs: #214
